# balltze

./: .gitattributes  .gitignore  .gitmodules  .luarc.json  404.html  API.md  CMakeLists.txt  CNAME  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml
.github/ISSUE_TEMPLATE/: bug-report---.md
.github/workflows/: balltze-build.yml  docker-build.yml  docker-image-build.yml  mkdocs-deploy.yml
cmake/: FindLuaRuntime.cmake  balltze-library.cmake  toolchain-i686-w64-mingw32.cmake
config/: controller.json
data/: settings.json
data/config/: settings.json
data/config/gamepad/: dual_shock_1_windows.json  xbox_360_windows.json
docs/: API.md  GETTING-STARTED.md  index.md  install.md
docs/features/: console-key-custom-binding.md  hud-button-prompts.md  loading-screen.md  map-textures-preloading.md  multiplayer-menu-extended-description-fix.md  overview.md  sound-subtitles.md  tags-handling.md  ui-widget-widescreen-support.md
docs/features/engine/: extended-limits.md  loading-screen.md  map-textures-preloading.md  sound-subtitles.md  tags-handling.md
docs/features/shaders/: hud-meters.md
docs/features/user_interface/: console-key-custom-binding.md  gamepad-pause-button.md  hud-button-prompts.md  multiplayer-menu-extended-description-fix.md  widget-widescreen-support.md
docs/plugins/: first-lua-plugin.md  introduction.md
docs/stylesheets/: extra.css
features/engine/extended-limits/: index.html
features/engine/loading-screen/: index.html
features/engine/map-textures-preloading/: index.html
features/engine/sound-subtitles/: index.html
features/engine/tags-handling/: index.html
features/overview/: index.html
features/shaders/hud-meters/: index.html
features/shaders/shader-transparent-chicago/: index.html
features/user_interface/console-key-custom-binding/: index.html
features/user_interface/gamepad-pause-button/: index.html
features/user_interface/hud-button-prompts/: index.html
features/user_interface/multiplayer-menu-extended-description-fix/: index.html
features/user_interface/widget-widescreen-support/: index.html
include/balltze/: api.hpp  balltze.hpp  command.hpp  config.hpp  engine.hpp  event.hpp  events.hpp  features.hpp  hook.hpp  logger.hpp  math.hpp  memory.hpp  output.hpp  plugin.hpp  utils.hpp
include/balltze/config/: ini.hpp
include/balltze/engine/: console.hpp  core.hpp  data_types.hpp  game_state.hpp  hud.hpp  map.hpp  multiplayer.hpp  netgame.hpp  netgame_messages.hpp  network.hpp  path.hpp  rasterizer.hpp  renderer.hpp  resolution.hpp  saved_games.hpp  script.hpp  tag.hpp  tag_class.hpp  tag_classes.hpp  tick.hpp  type.hpp  user_interface.hpp  version.hpp  widget.hpp  window.hpp
include/balltze/event/: event.hpp  tick_event.hpp
include/balltze/events/: camera.hpp  console.hpp  console_command.hpp  d3d9.hpp  d3d9_device_reset.hpp  d3d9_end_scene.hpp  event.hpp  frame.hpp  game_input.hpp  hud_hold_to_action_message.hpp  input.hpp  map.hpp  map_file_data_read.hpp  map_file_load.hpp  map_load.hpp  netgame.hpp  netgame_message.hpp  object_damage.hpp  rcon_message.hpp  render.hpp  server_connect.hpp  sound_playback.hpp  tick.hpp  ui_widget.hpp  widget.hpp
include/balltze/features/: menu_widescreen.hpp  tag_data_handling.hpp  tags_handling.hpp  user_interface.hpp
include/balltze/hek/: tag_file.hpp
include/balltze/helpers/: d3d9.hpp  d3d9_sprite.hpp  event_base.hpp  event_base.inl  resources.hpp  string.hpp  string_literal.hpp
include/balltze/legacy_api/: event.hpp  plugin.hpp
include/balltze/map_loading/: compression.hpp  laa.hpp  map.hpp  map_loading.hpp
include/balltze/math/: trig.hpp
include/balltze/memory/: codecave.hpp  codefinder.hpp  memory.hpp  signature.hpp  struct.hpp
include/balltze/output/: message_box.hpp
include/nlohmann/: fifo_json.hpp
include/semver/: COPYRIGHT
install/: index.html
lib/clipboardxx/: clipboardxx.hpp
lib/fmt/: fmt.cmake
lib/invader/: invader.cmake
lib/invader/sound/: sound_encoder.cpp  sound_reader.hpp  sound_reader_16_bit_pcm_big_endian.cpp  sound_reader_ogg.cpp  sound_reader_xbox_adpcm.cpp
lib/lanes/: lanes.cmake
lib/lanes/src/: _pch.h  keeper.cpp  lanes.h  lanes_private.h  linda.cpp  macros_and_utils.h  threading.cpp
lib/lua/: lapi.c  lfunc.c  lgc.c  lstate.c  lstate.h  lua.cmake
lib/lua_fmt/: lua_fmt.cmake
lib/lua_memory_snapshot/: LICENSE  lua_memory_snapshot.c  lua_memory_snapshot.cmake  lua_memory_snapshot.h
lib/luacstruct/: COPYRIGHT  endian.h  luacstruct.c  luacstruct.cmake  luacstruct.h  queue.h  tree.h
lib/luastruct/: luastruct.cmake
lib/luastruct/src/: array.c  debug.c  enum.c  object.c  struct.c
lua/: env.lua
lua/chimera_scripts/: balltze.lua
lua/code_gen/: header_collection.lua  parse_tag_definition.lua  tag_copy_data_function.lua  tag_data_lua_annotations.lua  tag_data_lua_definitions.lua  tag_data_lua_metatables.lua  tag_definition_headers.lua  tag_definition_struct.lua  tag_definitions.cmake  tag_rebase_offsets_function.lua  tag_resolve_dependencies_function.lua
lua/code_gen/legacy_tags_definitions/: legacy_tags_definitions.cmake  parse_tag_definition.lua  tag_data_lua_definitions.lua  tag_definition_headers.lua
lua/code_gen/ringworld_tags_definitions/: ringworld_tags_definitions.cmake  tag_lua_definitions.lua  tag_lua_docs.lua  tagsLuaDefinitions.lua
lua/modules/: luna.lua
lua/plugins/docs/: balltze.lua  engine.lua  fmt.lua
lua/plugins/examples/: aspect_ratio.lua  forge_ce_meters.lua  hello_world.lua  luastruct_test.lua
lua/plugins/legacy/: hello_world.lua
lua/tag_definitions_generator/: generate_struct.lua  generate_structs.lua  parse_definition.lua  tag_definitions.cmake  tag_structures.cmake
package/: manifest.json
plugins/first-lua-plugin/: index.html
plugins/introduction/: index.html
search/: search_index.json
src/balltze/: balltze.cpp  balltze.hpp  logger.hpp  main.cpp  resources.hpp  version.hpp
src/fmt/: fmt.cmake  format.cc  os.cc
src/invader/: invader.cmake
src/lua/: lua.cmake
src/sound-subtitles-stapler/: main.cpp  sss.cmake
stylesheets/: extra.css
(+529 files in other folders)
